<resources>
    <string name="app_name">Reework</string>
    <string-array name="strategy_bz_maharaj">
        <item>Samasya/Need of people</item>
        <item>Your Niyat</item>
        <item>Saujanyshilata</item>
        <item>paryay</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
    </string-array>
    <string-array name="subscription_types">
        <item>Yearly</item>
    </string-array>
    <string-array name="country_list">
        <item>India</item>
    </string-array>
    <string-array name="food_preferences">
        <item>Vegetarian</item>
        <item>Jain</item>
        <item>Eggetarian</item>
        <item>Non- Vegetarian</item>
    </string-array>
    <string-array name="food_culture">
        <item>Punjabi</item>
        <item>Bengali</item>
        <item>Marathi</item>
        <item>Gujarati</item>
    </string-array>
    <string-array name="avg_sleep_hrs">
        <item>1 Hrs</item>
        <item>2 Hrs</item>
        <item>3 Hrs</item>
        <item>4 Hrs</item>
        <item>5 Hrs</item>
        <item>6 Hrs</item>
        <item>7 Hrs</item>
        <item>8 Hrs</item>
        <item>9 Hrs</item>
        <item>10 Hrs</item>
        <item>11 Hrs</item>
        <item>12 Hrs</item>
        <item>13 Hrs</item>
        <item>14 Hrs</item>
        <item>15 Hrs</item>
        <item>16 Hrs</item>
        <item>17 Hrs</item>
        <item>18 Hrs</item>
        <item>19 Hrs</item>
        <item>20 Hrs</item>
        <item>21 Hrs</item>
        <item>22 Hrs</item>
        <item>23 Hrs</item>
        <item>24 Hrs</item>
    </string-array>
    <string-array name="water_intake">
        <item>1 Glass</item>
        <item>2 Glasses</item>
        <item>3 Glasses</item>
        <item>4 Glasses</item>
        <item>5 Glasses</item>
        <item>6 Glasses</item>
        <item>7 Glasses</item>
        <item>8 Glasses</item>
        <item>9 Glasses</item>
        <item>10 Glasses</item>
        <item>11 Glasses</item>
        <item>12 Glasses</item>
    </string-array>
    <string-array name="medical_conditions">
        <item>None</item>
        <item>Diabetes Type I</item>
        <item>Diabetes Type II</item>
        <item>High Blood Pressure</item>
        <item>Low Blood Pressure</item>
        <item>Acidity</item>
        <item>PCOD</item>
        <item>High Cholesterol</item>
        <item>Water Retention</item>
        <item>High Uric Acid</item>
        <item>Heart Disease</item>
        <item>Thyroid [Hypo]</item>
        <item>Others</item>
    </string-array>
    <string-array name="reminder_frequency">
        <item>Select Frequency</item>
        <item>1 time</item>
        <item>2 times</item>
        <item>3 times</item>
        <item>4 times</item>
        <item>5 times</item>
        <item>6 times</item>
        <item>7 times</item>
        <item>8 times</item>
        <item>9 times</item>
        <item>10 times</item>
    </string-array>
    <string-array name="medicine_frequency">
        <item>Select Frequency</item>
        <item>Once a Day</item>
        <item>Twice a day</item>
        <item>Thrice a day</item>

    </string-array>
    <string-array name="sleep_type">
        <item>Deep Sleep</item>
        <item>Disturbed Sleep</item>


    </string-array>
    <string-array name="medicine_frequency_when">
        <item>Select When</item>
        <item>Empty Stomach</item>
        <item>Before Breakfast</item>
        <item>After Breakfast</item>
        <item>Before Lunch</item>
        <item>After Lunch</item>
        <item>Before Dinner</item>
        <item>After Dinner</item>
        <item>Others</item>


    </string-array>
    <string-array name="activity_type">
        <item>Select Activity</item>
        <item>Medicine</item>
        <item>Water</item>
        <item>Sleep</item>
        <item>Activity</item>
        <item>Food</item>

    </string-array>
    <string-array name="activity_hr">
        <item>0 Hr</item>
        <item>1 Hr</item>
        <item>2 Hr</item>
        <item>3 Hr</item>
        <item>4 Hr</item>
        <item>5 Hr</item>
        <item>6 Hr</item>
        <item>7 Hr</item>
        <item>8 Hr</item>
        <item>9 Hr</item>
        <item>10 Hr</item>
        <item>11 Hr</item>
        <item>12 Hr</item>

    </string-array>
    <string-array name="activity_min">
        <item>0 Min</item>
        <item>1 Min</item>
        <item>2 Min</item>
        <item>3 Min</item>
        <item>4 Min</item>
        <item>5 Min</item>
        <item>6 Min</item>
        <item>7 Min</item>
        <item>8 Min</item>
        <item>9 Min</item>
        <item>10 Min</item>
        <item>11 Min</item>
        <item>12 Min</item>
        <item>13 Min</item>
        <item>14 Min</item>
        <item>15 Min</item>
        <item>16 Min</item>
        <item>17 Min</item>
        <item>18 Min</item>
        <item>19 Min</item>
        <item>20 Min</item>
        <item>21 Min</item>
        <item>22 Min</item>
        <item>23 Min</item>
        <item>24 Min</item>
        <item>25 Min</item>
        <item>26 Min</item>
        <item>27 Min</item>
        <item>28 Min</item>
        <item>29 Min</item>
        <item>30 Min</item>
        <item>31 Min</item>
        <item>32 Min</item>
        <item>33 Min</item>
        <item>34 Min</item>
        <item>35 Min</item>
        <item>36 Min</item>
        <item>37 Min</item>
        <item>38 Min</item>
        <item>39 Min</item>
        <item>40 Min</item>
        <item>41 Min</item>
        <item>42 Min</item>
        <item>43 Min</item>
        <item>44 Min</item>
        <item>45 Min</item>
        <item>46 Min</item>
        <item>47 Min</item>
        <item>48 Min</item>
        <item>49 Min</item>
        <item>50 Min</item>
        <item>51 Min</item>
        <item>52 Min</item>
        <item>53 Min</item>
        <item>54 Min</item>
        <item>55 Min</item>
        <item>56 Min</item>
        <item>57 Min</item>
        <item>58 Min</item>
        <item>59 Min</item>
        <item>60 Min</item>


    </string-array>
    <string-array name="medicine_days">
        <item>Select All</item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="week_days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="graph_months">
        <item>Oct-2018</item>
        <item>Nov-2018</item>
        <item>Dec-2018</item>
        <item>Jan-2019</item>
        <item>Feb-2019</item>
        <item>Mar-2019</item>
        <item>Apr-2019</item>
    </string-array>
    <string-array name="plan_types">
        <item>Today\'s Plan</item>
        <item>Supplement Plan</item>
        <item>Nutrition Plan</item>
        <item>Lifestyle Plan</item>
        <item>Food Plan</item>
        <item>Cheat Plan</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_job">\"Good Job\"</string>
    <string name="title_health_parameters">Health Parameters</string>
    <string name="message_reescore">Measure your Health Progress \"Not just in KGs\" because \"You are not just what you weigh\"!!!</string>
    <string name="reescore_big_message">This is your personal wellness score based on your body composition Analysis, Body vitals, Blood reports and counselling.It simplifies the health status of an individual into just one number which is a scientifically calculated number from 1 (low) to 100 (high).Health Score is based on who you are (body), how you feel (mind) and how you live (lifestyle)</string>
    <string name="reescore_introduction"> Reescore is designed by highly qualified Nutrition Experts who have designed Algorithm to calculate the PWS( Personal Wellness Score) taking into account your BMI, Body Composition Analysis, Body Vitals, Blood reports, various Health parameters, Body Types, Body shapes, Medical Conditions, Physical Activity, Lifestyles, Food intake, Food portion sizes, eating habits and pattern, Sleep, Smoking Alcohol, stress. \n\n It simplifies your health status into just one number which is scientifically calculated number from 1 (low) to 100 (High)• \n\n It is a score based on who you are (body), how you feel (mind) and how you live (lifestyle).</string>
    <string name="interpretation">Interpretation</string>
    <string name="splash_message">Are you ready to start your\njourney of thousand miles which\nbegins with a single step?</string>
    <string name="app_snippet_reengage">REENGAGE: login your details and set your profile information.</string>
    <string name="app_snippet_reeasses">REEASSES: Know your current Health</string>
    <string name="app_snippet_body_vital">Body vitals</string>
    <string name="app_snippet_blood_test">Pathology Test</string>
    <string name="Data_not_found">Data not found</string>
    <string name="app_snippet_reescore">REESCORE: It is an overall rating of the quality of your lifestyle, nutrition, sleep patterns, hydration levels and your mind. Higher the score means you are following holistic approach to optimize your Health.</string>
    <string name="app_snippet_reeevaluate">Reeevaluate:Detailed questionnaire for your reecoach to understand better and help you achieve your health goals.</string>
    <string name="app_snippet_reetest">Reetest: Important Blood tests to know your body vitals.</string>
    <string name="app_snippet_get_a_reecoach">Get a Reecoach:</string>
    <string name="app_snippet_counselling">COUNSELLING</string>
    <string name="app_snippet_assessment">ASSESSMENT</string>
    <string name="app_snippet_assign_achievable_targets">ASSIGN ACHIEVABLE TARGETS.</string>
    <string name="app_snippet_get_customized_reeplans">Get customized Reeplans</string>
    <string name="app_snippet_get_LifestylePlans">Lifestyle Plans</string>
    <string name="app_snippet_get_NutritionPlans">Nutrition Plans</string>
    <string name="app_snippet_get_FoodPlans">Food Plans</string>
    <string name="app_snippet_get_SupplementPlans">Supplement Plans</string>
    <string name="app_snippet_get_CheatPlans">Cheat Plans</string>
    <string name="app_snippet_reeports">Reeports - Personal wellness REPORT</string>
    <string name="app_snippet_reengage_start">Reengage: Start logging in your activity/Nutrition/Water/Sleep and mood of the day.</string>
    <string name="app_snippet_reevitalise">Reevitalise: Track progress of your Health</string>
    <string name="app_snippet_reefocus">Reefocus: Get instant Reminders/Notifications for better adherence with constant monitoring and motivations</string>
    <string name="app_snippet_reestore">Reestore:Buy online foods,products and superfoods</string>
    <string name="view_more">View More</string>
    <string name="sbt_confirmation_message">While planning to move for Pathology Test, please make sure you at fasting state for 12 hours.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="why_health_amp_wellness">Why Health &amp; Wellness</string>
    <string name="set_your_health_goal_here">Set Your Health Goal Here</string>
    <string name="health_amp_wellness">Health &amp; Wellness</string>
    <string name="weight_control">Weight Control</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="easy_monitoring_of_body_parameters">Easy Monitoring of body parameters</string>
    <string name="select_your_body_shape">Select Your Body Shape </string>
    <string name="pear">Pear</string>
    <string name="apple">Apple</string>
    <string name="enter_your_weight_height">Enter Your Weight &amp; Height</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_in_cms">Height (in cms)</string>
</resources>