<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".reework.fragment.HealthParameters1Fragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyler_1"

        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle.CoolveticaRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/set_your_health_goal_here"
                android:textColor="@color/colorPremiumBlack" />

            <TextView
                android:id="@+id/textHP_WhyHealthAndWealth"
                style="@style/TextStyle.CalibriLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/why_health_amp_wellness"
                android:textColor="@color/colorGreen5"
                android:textSize="@dimen/text_tiny" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rd_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            android:checked="false"
                            android:layout_alignParentTop="true"
                            android:paddingLeft="5dp"
                            android:text="@string/health_amp_wellness" />

                         <ImageView
                             android:id="@+id/iv_health_fitness"
                             android:layout_width="@dimen/size18"
                             android:layout_height="@dimen/size18"
                             android:layout_gravity="center"
                             android:layout_marginLeft="2dp"
                             android:scaleType="fitXY"
                             android:visibility="gone"

                             android:src="@drawable/info"/>
                     </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rd_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            android:paddingLeft="5dp"
                            android:text="@string/weight_control" />

                        <ImageView
                            android:id="@+id/iv_weight_control"
                            android:layout_width="@dimen/size18"
                            android:layout_height="@dimen/size18"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:scaleType="fitXY"
                            android:visibility="gone"

                            android:src="@drawable/info"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rd_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            android:paddingLeft="5dp"
                            android:text="@string/weight_gain" />

                        <ImageView
                            android:id="@+id/iv_weight_gain"
                            android:layout_width="@dimen/size18"
                            android:layout_height="@dimen/size18"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:scaleType="fitXY"
                            android:visibility="gone"

                            android:src="@drawable/info"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rd_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            android:paddingLeft="5dp"
                            android:text="@string/easy_monitoring_of_body_parameters" />
                        <ImageView
                            android:id="@+id/iv_easy_monitoring"
                            android:layout_width="@dimen/size18"
                            android:layout_height="@dimen/size18"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:scaleType="fitXY"
                            android:visibility="gone"

                            android:src="@drawable/info"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/health_amp_wellness" />

                    <Switch
                        android:id="@+id/switchHP_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weight_control" />

                    <Switch
                        android:id="@+id/switchHP_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weight_gain" />

                    <Switch
                        android:id="@+id/switchHP_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/easy_monitoring_of_body_parameters" />

                    <Switch
                        android:id="@+id/switchHP_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/ll_body_shape_tooltip"

            android:orientation="horizontal">

        <TextView
            style="@style/TextStyle.CoolveticaRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/select_your_body_shape"
            android:textColor="@color/colorPremiumBlack" />




            <ImageView
                android:layout_width="@dimen/size18"
                android:layout_height="@dimen/size18"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:scaleType="fitXY"

                android:src="@drawable/info"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/RadioGroupBodyShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonPear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/custom_btn_radio_pear"
                android:gravity="center"
                android:text="@string/pear" />

            <RadioButton
                android:id="@+id/radioButtonApple"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:button="@null"
                android:drawableTop="@drawable/custom_btn_radio_apple"
                android:gravity="center"
                android:text="@string/apple" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:button="@null"
                android:visibility="invisible" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle.CoolveticaRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enter_your_weight_height"
            android:textColor="@color/colorPremiumBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight_kg" />

                <EditText
                    android:id="@+id/edtTextHP_Weight"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_edit_text_box_border"
                    android:checked="true"
                    android:digits="0.123456789"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="5dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height_in_cms" />

                <EditText
                    android:id="@+id/edtTextHP_Height"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_edit_text_box_border"
                    android:checked="true"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="5dp"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</ScrollView>